[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Ingmar Mueller", email = "ingmar.mueller@kfw.de"},
  {name = "Mario Macai", email = "mario.macai@accenture.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["homeassistant", "home-assistant-bluetooth", "voluptuous", "voluptuous-serialize", "goechargerv2"]
description = "This is an integration for home assistant for the go echarger wallbox (API v2)."
keywords = ["goecharger", "kfw", "homeassistant", "cloud"]
name = "homeassistant_goechargerv2"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0"

[project.optional-dependencies]
dev = ["black", "pylint"]

[project.urls]
"Bug Tracker" = "https://github.com/openkfw/homeassistant_goechargerv2/issues"
"Homepage" = "https://github.com/openkfw/homeassistant_goechargerv2"
